# claude-agent-w-blob-storage

./: .env.example  .gitignore  ARCHITECTURE.md  COST_SIMULATION.md  EXAMPLES.md  IMPLEMENTATION_SUMMARY.txt  MIGRATION_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  agent.py  cli.py  examples.py  pyproject.toml  requirements.txt  storage_tools.py  test_storage.py
agents/: __init__.py  analysis_agent.py  base_agent.py  ingest_agent.py
docs/: SHARDED_INDEX_DESIGN.md
samples/: asyncio_python.html  kubernetes_basics.txt  prompt_engineering.md  python_gil.txt  rag_vector_database.html
scripts/: migrate_index_v2.py  migrate_index_v3.py
storage/: __init__.py  base.py  bloom_filter.py  filesystem.py
tools/: __init__.py  document_tools.py  index_builder.py  index_builder_v3.py  kb_tools.py  sharded_index_reader.py  sharded_index_reader_v3.py
