[project]
name = "knowledge-base-cli"
version = "0.1.0"
description = "Claude Agent SDK 기반 파일 지식 베이스 관리 CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "ghlee7411" }
]
keywords = ["claude", "agent", "knowledge-base", "cli"]

dependencies = [
    "claude-agent-sdk>=0.1.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "anyio>=4.0.0",
    "anthropic>=0.18.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
azure = ["azure-storage-blob>=12.0.0"]
aws = ["boto3>=1.26.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[project.scripts]
kb = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "tools", "storage"]
include = ["cli.py"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
